# metacontrol_tooling

./: CMakeLists.txt  README.md  mros.mros  package.xml
Test Scenarios/Bosch_Project/: .project
Test Scenarios/Bosch_Project/src-gen/: components.yaml  pilot.owl  pilot.yaml
Test Scenarios/IRCJ_Demo/: .project
Test Scenarios/IRCJ_Demo/src-gen/: components.yaml  pilot.owl  pilot.yaml
include/metacontrol_tooling/: nav_action_proxy_node.hpp
org.xtext.mros.mros/: .project  plugin.xml
org.xtext.mros.mros.ide/: .project
org.xtext.mros.mros.ide/src-gen/org/xtext/mros/mros/ide/: AbstractMROSIdeModule.java
org.xtext.mros.mros.ide/src/org/xtext/mros/mros/ide/: MROSIdeModule.java  MROSIdeSetup.java
org.xtext.mros.mros.tests/: .project
org.xtext.mros.mros.tests/src-gen/org/xtext/mros/mros/tests/: MROSInjectorProvider.java
org.xtext.mros.mros.tests/src/org/xtext/mros/mros/tests/: MROSParsingTest.xtend
org.xtext.mros.mros.tests/test-bin/org/xtext/mros/mros/tests/: .MROSParsingTest.java._trace  .MROSParsingTest.xtendbin
org.xtext.mros.mros.ui/: .project  plugin.xml
org.xtext.mros.mros.ui.tests/: .project
org.xtext.mros.mros.ui/src/org/xtext/mros/mros/ui/: MROSUiModule.java
org.xtext.mros.mros/.launch/: Generate MROS (mros) Language Infrastructure.launch  Launch Runtime Eclipse.launch
org.xtext.mros.mros/src-gen/org/xtext/mros/mros/: AbstractMROSRuntimeModule.java  MROSStandaloneSetupGenerated.java
org.xtext.mros.mros/src/org/xtext/mros/mros/: GenerateMROS.mwe2  MROS.xtext  MROSRuntimeModule.java  MROSStandaloneSetup.java
src/: nav_action_proxy_node.cpp  reconfig_time_meter.cpp
(+90 files in other folders)
